# cookiecutter-en280-project

./: cookiecutter.json
hooks/: post_gen_project.py  pre_prompt.py
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml  ruff.toml
{{ cookiecutter.project_slug }}/data/: sample.csv
{{ cookiecutter.project_slug }}/notebooks/: intro.ipynb
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
